--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Satyam Singh</span><br> Developer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Satyam Singh</span><br> Student</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
