added links to the projects section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#work" class="nav__link">Work</a></li>
+                        <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -42,13 +42,14 @@
                     
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Satyam Singh</span><br> Student</h1>
 
-                    <a href="#" class="button">Contact</a>
+                    <!-- <a href="#" class="button">Resume</a> -->
+                    <a href="https://drive.google.com/file/d/1HQWDvkkbcVAZ9AoOEL2jr1rU5EuNFTAU/view?usp=sharing" target="_blank" class="button" >View Resume</a>
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/satyam-singh-483673207/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://github.com/satmm" class="home__social-icon"><i class='bx bxl-github' ></i></a>
-                    <a href="https://twitter.com/Satyam_singh12" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://www.linkedin.com/in/satyam-singh-483673207/" target="_blank" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                    <a href="https://github.com/satmm" target="_blank" class="home__social-icon"><i class='bx bxl-github' ></i></a>
+                    <a href="https://twitter.com/Satyam_singh12" target="_blank" class="home__social-icon"><i class='bx bxl-twitter' ></i></a>
                 </div>
 
                 <div class="home__img">
@@ -146,26 +147,26 @@
 
             <!--===== WORK =====-->
             <section class="work section" id="work">
-                <h2 class="section-title">Work</h2>
+                <h2 class="section-title">Projects</h2>
 
                 <div class="work__container bd-grid">
-                    <a href="" class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                    <a href="https://github.com/satmm/twitter-clone.git" target="_blank" class="work__img">
+                        <img src="assets/img/Project-1.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                    <a href="https://github.com/satmm/Student_Grievance_App.git" target="_blank" class="work__img">
+                        <img src="assets/img/Project-2.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                    <a href="https://github.com/satmm/IMDB-Clone.git" target="_blank" class="work__img">
+                        <img src="assets/img/Project-3.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                    <a href="https://github.com/satmm/ML-Project/blob/main/Day8.ipynb" target="_blank" class="work__img">
+                        <img src="assets/img/Project-4.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
+                    <a href="https://github.com/satmm/File-Security.git" target="_blank" class="work__img">
+                        <img src="assets/img/project-5.jpg" alt="">
                     </a>
-                    <a href="" class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                    <a href="https://github.com/satmm/My-Portfolio.git" target="_blank" class="work__img">
+                        <img src="assets/img/Project-6.jpg" alt="">
                     </a>
                 </div>
             </section>
