--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                     <form action="https://formspree.io/f/xpzgvprk" method="POST" class="contact__form">
                         <input type="text" name="Name" placeholder="Name" class="contact__input" required>
                         <input type="email" name="_replyto" placeholder="Email" class="contact__input" required>
-                        <textarea name="Message" placeholder="Let's talk tech! Send a message,or just drop a quick 'hello'. Excited to connect! 🫱🏻‍🫲🏻" cols="30" rows="10" class="contact__input" required></textarea>
+                        <textarea name="Message" placeholder="Let's talk! Send a message,or just drop a quick 'hello'. Excited to connect! 🫱🏻‍🫲🏻" cols="30" rows="10" class="contact__input" required></textarea>
                         <input type="submit" value="Send" class="contact__button button">
                     </form>
                     
